2022-03-21  Karl Berry  <karl@tug.org>

	* TL'22 release.

2022-03-10  Andreas Scherer  <https://ascherer.github.io>

	* ctangleboot.cin,
	* cwebboot.cin: Make 'fall thru' comments active.

2022-03-03  Andreas Scherer  <https://ascherer.github.io>

	* cpascal.h,
	* tangle.ch,
	* tangleboot.pin: Always create pool file next to Pascal file.

2022-03-02  Andreas Scherer  <https://ascherer.github.io>

	* help.h,
	* tangle.ch,
	* tangleboot.pin,
	* weave.ch: Permit user-defined output file names.

2022-02-24  Karl Berry  <karl@freefriends.org>

	* dvitype.ch (scan_bop, [99]): output a newline between
	font definitions so they do not run together.
	From Igor Liferenko,
	https://tug.org/pipermail/tex-k/2022-January/003760.html (change#3).
	Original report part of
	https://tug.org/pipermail/tex-k/2021-November/003711.html,
	and a first patch from Andreas Scherer in that thread,
	https://tug.org/pipermail/tex-k/2021-November/003721.html.

2022-02-18  Andreas Scherer  <https://ascherer.github.io>

	* cwebboot.cin,
	* ctangleboot.bin: Add '#line' after '#elif', '#else', and '#endif'.

2022-02-15  Andreas Scherer  <https://ascherer.github.io>

	* cwebboot.cin,
	* ctangleboot.bin: Add '#line' after '#endif'.

2022-02-11  Andreas Scherer  <https://ascherer.github.io>

	* weave.ch: Fix spacing in math expression.

2022-02-05  Andreas Scherer  <https://ascherer.github.io>

	* ctangleboot.bin: CWEB 4.7 release.

2022-01-29  Karl Berry  <karl@freefriends.org>

	* doc/web2c.texi (TeX extensions): simplify references.

2022-01-22  Hironori Kitagawa  <h_kitagawa2001@yahoo.co.jp>

	* texmfmem.h: Change type of str_pool to unsigned short for pTeX.
	  We use only 0--511, and use flag 0x100 for Japanese char.

2022-01-21  Karl Berry  <karl@freefriends.org>

	* ac/web2c.ac (kpse_tex_progs): enable hitex by default.

2022-01-18  Karl Berry  <karl@freefriends.org>

	* doc/web2c.texi (TeX extensions): mention pdftex manual and
	ltnews31.pdf as primary documentation for the cross-engine