@@ -18,15 +18,11 @@
 .SH NAME
 tangle \- translate WEB to Pascal
 .SH SYNOPSIS
-.B tangle
-.RI [ options ]
-.IR webfile [ \fB.web\fP ]
-[ {
-.IR changefile [ \fB.ch\fP ]
-|\-}
-[
-.IR outfile [ \fB.p\fP ]
-] ]
+.PP
+\f[B]tangle\f[R] [\f[I]options\f[R]]
+\f[I]webfile\f[R][\f[B].web\f[R]]
+[{\f[I]changefile\f[R][\f[B].ch\f[R]]|\f[B]-\f[R]}
+[\f[I]outfile\f[R][\f[B].p\f[R]]]]
 .\"=====================================================================
 .SH DESCRIPTION
 This manual page is not meant to be exhaustive.  The complete
