@@ -1,3 +1,8 @@
+2022-03-27  Andreas Scherer  <https://ascherer.github.io>
+
+	* tangle.man,
+	* weave.man: Improved SYNOPSIS formatting.
+
 2022-03-21  Karl Berry  <karl@tug.org>
 
 	* TL'22 release.
